refactored to include all new routes
